vlc.misc.should_die() crash VLC
"misc.should_die(): Returns true if the interface should quit."
I have used vlc.misc.should_die() in lua SD and it crash VLC
[000342f8] main libvlc debug: VLC media player - version 1.1.0-git-20100305-0002 The Luggage - (c) 1996-2010 the VideoLAN team
...
QObject::killTimers: timers cannot be stopped from another thread