LUA: do not blindly cast object to interface thread (fix #3396)